fix spacing mobile footer links

--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -702,6 +702,15 @@ img, #information i.fa.fa-5x.fa-facebook.center-icon.pullR{
   #information .credits p.col-md-6.text-muted.pullR{
   float: right;
   }
+  #information .credits .col-md-6{
+    margin-bottom: 20px;
+    &:first-child{
+    margin-top: 20px;
+  }
+    &:last-child{
+      margin-bottom: 0;
+    }
+  }
   #landingR img{ 
   max-width: 33%;
   margin-left: 10px;
@@ -710,6 +719,7 @@ img, #information i.fa.fa-5x.fa-facebook.center-icon.pullR{
   max-width: 75%;
   padding-top: 3px;
   }
+
 }
 @media only screen and (min-width: 768px) and (max-width: 1050px) {
 #carousel-systems{
